# Variable-Acoustic-Organizer

./: .gitignore  FEATURE_COLUMNS_COMPARE16_LLD_25ms_1ms.txt  README.md  feature_descriptions.txt  output.htk  pyproject.toml
deepfake_exp/: extract_frame_features.py  extract_metadata.py  gbdt_experiment.py  output_test.csv  practice_extract.py  practice_output.csv
experiments/deepfake/: download_corpus.py  extract.py  train.py
experiments/deepfake/test/: pipeline_test.py
scripts/: extract_timit.py
src/vao/: __init__.py  api.py  audio_preprocess.py  errors.py  features.py  opensmile_presets.py  opensmile_runner.py  voicing.py
src/vao/gate/: __init__.py  classifier.py  model.joblib  model_results.csv  phoneme_map.py  train.py
src/vao/opensmile_configs/: egemapsv02_lld_25ms_10ms.conf  egemapsv02_lld_25ms_1ms.conf
test/: extract_test.py  output.csv
tests/: run_extraction.py
tests/output/: combined.csv  noši2_s1.csv  ortug-speadrug_s1.csv
tests/output_egemapsv02_fixed/: ORDU-army,camp_s1.csv  noši2_s1.csv  oklâ-city,country_s1.csv
tests/wav/vao_output/: ORDU-army,camp_s1.csv  oklâ-city,country_s1.csv
